Fix portfolio images overlapping caption

--- a/less/agency.less
+++ b/less/agency.less
@@ -279,6 +279,9 @@ section {
     .portfolio-item {
         margin: 0 0 15px;
         right: 0;
+        .portfolio-image-container {
+            overflow: hidden;
+        }
         .portfolio-link {
             display: block;
             position: relative;
